@@ -1735,7 +1735,7 @@ def import_string(import_name, silent=False):
     Simplified version of the function with same name from `Werkzeug`_.
 
     :param import_name:
-        The dotted name for the object to import.
+        The dotted name of the object to be imported.
     :param silent:
         If True, import or attribute errors are ignored and None is returned
         instead of raising an exception.
@@ -1751,7 +1751,42 @@ def import_string(import_name, silent=False):
             return __import__(import_name)
     except (ImportError, AttributeError):
         if not silent:
+            _debug_import_string(import_name)
             raise
+
+
+def _debug_import_string(import_name):
+    """Logs debug message about a failed :func:`import_string` attempt.
+
+    :param import_name:
+        The dotted name of the object that failed to be imported.
+    """
+    import textwrap
+    parts = import_name.split('.')
+    partial_name = ''
+    tracked = []
+    for part in parts:
+        partial_name += (partial_name and '.') + part
+        partial_imported = import_string(partial_name, silent=True)
+        if partial_imported:
+            tracked.append((partial_name, partial_imported.__file__))
+        else:
+            track = ['            - %r found in %r.' % (n, f) \
+                     for n, f in tracked]
+            track.append('            - %r not found.' % partial_name)
+            s = len(track) != 1 and 's' or ''
+            msg = textwrap.dedent("""
+            import_string() failed for %r. Debugged import%s:\n\n%s
+
+            Possible reasons for failed import_string() are:
+
+            - missing __init__.py in a package;
+            - package or module path not included in sys.path;
+            - duplicated package or module name taking precedence in sys.path;
+            - missing module, class, function or variable;
+            """ % (import_name, s, '\n'.join(track)))
+            logging.warning(msg.strip())
+            break
 
 
 def _urlunsplit(scheme=None, netloc=None, path=None, query=None,
