@@ -1,3 +1,8 @@
+Development version
+===================
+- import_string() now logs information about common mistakes when it fails.
+
+
 Version 2.0.2 - July 18, 2011
 =============================
 - cached_property now uses threading.RLock for thread-safety.
